# tremor

./: .gitlab-ci.yml  Makefile.am  Makefile.aos3  Makefile.emx  Makefile.in  Makefile.os2  Makefile.rjw  Makefile.vbcc  Makefile.w32  Makefile2  README  Version_script.in  asm_arm.h  autogen.sh  backends.h  bitwise.c  bitwiseARM.s  block.c  codebook.c  codebook.h  codec_internal.h  configure.ac  configure.in  dpenARM.s  dsp.c  floor0.c  floor1.c  floor1ARM.s  floor1LARM.s  framing.c  info.c  iseeking_example.c  ivorbiscodec.h  ivorbisfile.h  ivorbisfile_example.c  mapping0.c  mdct.c  mdct.h  mdctARM.s  mdctLARM.s  (+16 more)
mips-dspr1/: decode_mapMIPS.S  floor1_inverse2MIPS.S  mdct_backwardMIPS.S
win32/VS2005/libtremolo/: libtremolo.sln  libtremolo.vcproj
win32/VS2005/libtremor/: libtremor.vcproj
win32/VS2005/testarm/: testarm.sln  testarm.vcproj
win32/VS2008/libtremor/: libtremor.vcproj
